# Customer-Churn-Prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MLproject  Makefile  README.md  project_analysis.md  pyproject.toml  python_env.yaml  requirements-dev.txt  requirements.txt
config/: mlflow_config.yaml  training_config.yaml
mlflow/: mlflow_setup.py
notebooks/: 01_initial_data_exploration.ipynb  02_churn_definition_analysis.ipynb  03_feature_engineering_experiments.ipynb  04_baseline_modeling.ipynb  05_advanced_modeling.ipynb
scripts/: api_example.py  demo_mlops_pipeline.py  demo_monitoring.py  mlflow_training_entry.py  production_demo.py  run_mlflow_experiment.py  start_api.py  start_mlflow_ui.py  test_monitoring.py  test_production_pipeline.py  train_production_model.py
src/: __init__.py
src/api/: auth.py  main.py  production_main.py
src/data/: data_profiler.py  data_validator.py
src/features/: __init__.py  base_features.py  behavioral_features.py  feature_store.py
src/models/: __init__.py  baseline_model.py  data_preparation.py  ensemble_models.py  evaluation.py  mlflow_ensemble_models.py
src/monitoring/: __init__.py  dashboard.py  drift_detector.py  performance_monitor.py
src/pipelines/: __init__.py  inference_pipeline.py  training_pipeline.py
